==
== PixScribe Photo Annotation Tools
==

Changes in release 0.1 (in progress)

* 2007-01-22 - First version of a maintenance tool library based on
  Expat parser.  Was previously using some perl scripts for creating
  an empty description file for all pictures in a directory.  This was
  fine for documenting accumulated digital pictures, but when scanning
  accumulated film, pictures were being added to completed directories
  and it was getting difficult to keep track.

* 2006-12-16 - The pixtag domain has been snatched up by someone else.
  Annoyed at himself, Dave registers the pixscribe.com domain instead.

* 2006-12-01 - After acquiring forty years and 25 CDs of unlabeled
  picture scans from his father, Dave develops a renewed interest in
  labeling his own pictures and scanning his old ones.

* 2006-09-04 - Dave lets the pixtag.com and picstag.com domains expire
  since he has done nothing with them and is tired of paying the $30.

* 2003-11-03 - Progress is slow but continuing.  I have run the pixtag
  description format and file naming convention through real-world
  tests while scanning 35mm photos and organizing new digital photos.
  It has held up quite well, and I have spread the specs around to a
  few other folks who seem to have similar needs.

  I have been writing little tools as I need them.  The first one read
  the pixtag data and generated an HTML page with the descriptions and
  links to the photos.  I used that for putting a web page for a
  summer work picnic.

  The second tool generated an empty set of XML tags for a given set
  of file names, which made it easier for me to document a bunch of
  photos in one big go.

  I have been using EMACS to author the descriptions, but have been
  working on a simple Visual Basic tool to make it easier for other
  folks to write notes.  This is coming along, but not yet ready.

  I use jhead to batch rename digicam files from the EXIF timestamp.